--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <main>
+    <img src="img/cloud1.png" alt="" class="cl1">
+    <img src="img/cloud2.png" alt="" class="cl2">
     <article>
       <p><strong>Lolem</strong>ipsum</p>
       <em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla neque, consequatur beatae ipsam rerum
@@ -20,6 +22,8 @@
 
     <figure>
       <div class="screen">
+        <img src="img/cloud1.png" alt="" class="cl1">
+        <img src="img/cloud2.png" alt="" class="cl2">
         <em class="am">am</em>
         <em class="pm">pm</em>
         <span>00</span> : <span>00</span> : <span>00</span>
